replace sun.misc.BASE64Encorder